--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "scrollreveal": "^4.0.9",
+    "swiper": "^9.4.1",
     "vue": "^3.2.47",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^4.1.6",
